--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ xarray = ">=2024.10.0,<2025"
 zarr = ">=2.18.3,<3"
 tqdm = ">=4.66.6,<5"
 aiofiles = ">=24.1.0,<25"
+ipywidgets = ">=8.1.5,<9"
+pyarrow = ">=18.0.0,<19"
 
 [tool.pixi.environments]
 default = { solve-group = "default" }
